--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "test": "tests"
     },
     "scripts": {
-        "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+        "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+        "start": "node src/index.js",
+        "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
     },
     "repository": {
         "type": "git",
@@ -24,8 +26,12 @@
     },
     "homepage": "https://github.com/rwuniard/myrestsvc#readme",
     "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
         "env-cmd": "^10.1.0",
-        "express": "^4.17.1",
-        "nodemon": "^2.0.4"
+        "jest": "^26.0.1",
+        "nodemon": "^2.0.4",
+        "supertest": "^4.0.2"
     }
 }
