--- a/k8s/myrest-server-deployment.yaml
+++ b/k8s/myrest-server-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: myrestserver
-          image: rwuniard/myrestserver
+          image: rwuniard/myrestsvc
           ports:
             - containerPort: 3000
