--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -14,4 +14,5 @@ deploy:
   kubectl:
     manifests:
       - k8s/myrest-server-deployment.yaml
-      - k8s/myrest-server-node-port.yaml
+      - k8s/myrest-server-cluster-ip-service.yaml
+      - k8s/ingress-service.yaml
