Set the encryption and sync project to match GCP

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc #This two commands will install google sdk and this came from an instruction.
   - gcloud components update kubectl #install kubectl
   - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project test-myrestsvc #This is the project ID in google cloud project.
+  - gcloud config set project test-myrestsvc-290300 #This is the project ID in google cloud project.
   - gcloud config set compute/zone us-central1-c
   - gcloud container clusters get-credentials myrestsvc-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t rwuniard/myrestsvc -f ./Dockerfile.dev ./
+  - docker build -t rwuniard/myrestsvc -f ./Dockerfile ./
 
 
 deploy:
