added language to tell travis it is a nodejs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: node_js #This needs to be specified, otherwise you are getting error rake aborted -> The command rake exited with 1
 sudo: required
 services:
   - docker
