--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
         "test": "tests"
     },
     "scripts": {
-        "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-        "start": "node src/index.js",
-        "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
+        "start": "node src/index.js"
     },
     "repository": {
         "type": "git",
