--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "tests"
     },
     "scripts": {
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
     },
     "repository": {
         "type": "git",
@@ -25,5 +26,8 @@
     "homepage": "https://github.com/rwuniard/myrestsvc#readme",
     "dependencies": {
         "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.18"
     }
 }
