--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,4 +1,4 @@
-apiVersion: skaffold/v1beta2
+apiVersion: skaffold/v2beta12
 kind: Config
 build:
   local: # this means don't push to your git repo
@@ -9,7 +9,9 @@ build:
       docker:
         dockerfile: Dockerfile.dev
       sync:
-        "**/*.js": . # This means detect any javascript changes and copy it to target in kubernetes
+        manual:
+          - src: '**/*.js' # This means detect any javascript changes and copy it to target in kubernetes
+            dest: .
 deploy:
   kubectl:
     manifests:
